fix hr taking too much width

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,9 +42,6 @@ header {
 
 hr {
   margin-top: -1.5rem;
-  margin-left: -1rem;
-  margin-right: -1rem;
-  width: 105%;
 }
 
 nav {
